# NeuroM

./: .codecov.yml  .coveragerc  .gitattributes  .gitignore  .gitlab-ci.yml  .gitreview  .readthedocs.yml  .travis.yml  .zenodo.json  ACKNOWLEDGMENTS.md  AUTHORS.md  CHANGELOG.rst  L23_MC.json  LICENSE.txt  MANIFEST.in  Makefile  Makefile.hbp_ci  Makefile.travis_ci  NeuroM_tests.ipynb  README.md  README.rst  asv.conf.json  coverage.xml  dendrogram.py  morphology-2D.html  morphology-3D.html  neurom.ipynb  package.json  pep8rc  pylintrc  pyproject.toml  requirements.txt  requirements_benchmark.txt  requirements_dev.txt  requirements_docs.txt  requirements_hbp.txt  requirements_rtd.txt  setup.py  tox.ini
.binder/: postBuild
.github/workflows/: mirror-ebrains.yml  mybinder-build.yml  publish-sdist.yml  run-tox.yml  upload-pypi.yml
apps/: __main__.py  config.yaml  cut_plane_detection  morph_check  morph_stats  morph_validate  raw_data_check  validation.yaml
apps/config/: morph_stats.yaml
benchmarks/: benchmarks.py
doc/: Makefile  api.rst  clean.sh  conf.py  index.rst  make.bat  readme.rst  tutorial.rst
doc/source/: about.rst  api-dev.rst  api-public.rst  api.rst  apps.rst  build_status.rst  cli.rst  conf.py  definitions.rst  dependencies.rst  developer.rst  documentation.rst  examples.rst  features.rst  index.rst  (+17 more)
examples/: apical_point.py  basic_checks.py  boxplot.py  check_monotonicity.py  check_planar.py  comparison.py  cut_plane_detection_example.py  data_checks.py  dendrogram.py  dendrogram2.py  density_plot.py  distribution_to_json.py  end_to_end_distance.py  extract_distribution.py  ezy.py  ezy_advanced.py  features_graph_table.py  get_feature_design.py  get_features.py  histogram.py  iteration_analysis.py  log_neuron.py  make_copy.py  make_neuron.py  make_tree.py  meander_angles.py  morph_check.py  neuron_iteration_analysis.py  nl_compat.py  nl_fst_compat.py  plot_features.py  plot_somas.py  radius_of_gyration.py  read_h5_v1.py  read_swc.py  refactoring.py  section_ids.py  section_tree.py  section_tree_swc.py  soma_radius_fit  (+4 more)
ipynb/: cut_plane_detection.ipynb  neurom.ipynb  tutorial.ipynb
neurom/: __init__.py  _compat.py  bifurcations.py  exceptions.py  log.py  morphmath.py  points.py  sections.py  segments.py  stats.py  triplets.py  utils.py  version.py  viewer.py
test_data/: README.md  extracted-stats.csv  iter_positions.asc
tests/: conftest.py  test_examples.py  test_import.py  test_mixed.py  test_morphmath.py  test_stats.py  test_utils.py  test_viewer.py
tutorial/: astrocyte_analysis.ipynb  getting_started.ipynb  neurom_tutorial.ipynb  neurom_tutorial.rst  plotly.ipynb
(+388 files in other folders)
