[build-system]
requires = [
    "setuptools>=64",
    "setuptools_scm>=8"
]
build-backend = "setuptools.build_meta"

[project]
name = "neurom"
description = "NeuroM: a light-weight neuron morphology analysis package"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE.txt" }
authors = [
    { name = "Blue Brain Project, EPFL" },
]
classifiers = [
    "Development Status :: 6 - Mature",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    'click>=7.0',
    'matplotlib>=3.2.1',
    'morphio>=3.3.6',
    'numpy>=1.8.0',
    'pandas>=1.0.5',
    'pyyaml>=3.10',
    'scipy>=1.2.0',
    'tqdm>=4.8.4',
    'cached_property>=1.5.1',
    'importlib_resources>=1.3; python_version < "3.9"',
]
dynamic = ["version"]

[project.optional-dependencies]
plotly = [
    'plotly>=3.6.0',
    'psutil>=5.5.1'
]
docs = [
    'sphinx-bluebrain-theme',
    'sphinx-autorun',
]

[project.urls]
Homepage = "https://github.com/BlueBrain/NeuroM"
Repository = "https://github.com/BlueBrain/NeuroM.git"
Documentation = "https://neurom.readthedocs.io/"
Tracker = "https://github.com/BlueBrain/NeuroM/issues"

[project.scripts]
neurom = 'neurom.apps.cli:cli'

[tool.setuptools.packages.find]
include = ["neurom"]
namespaces = false

[tool.setuptools.package-data]
"*" = ["morph_check.yaml", "morph_stats.yaml"]

[tool.setuptools_scm]
local_scheme = "no-local-version"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[tool.black]
line-length = 100
target-version = [
    'py38',
    'py39',
    'py310',
    'py311',
]
skip-string-normalization = true
include = 'neurom\/.*\.py$|tests\/.*\.py$|doc\/source\/conf\.py$|setup\.py$|examples\/.*\.py$'

[tool.isort]
profile = "black"
line_length = 100
